--- a/front/index.jade
+++ b/front/index.jade
@@ -1,7 +1,8 @@
-html
+<html lang="jade">
 	head
 		meta( charset="utf-8" )
 		title Character Sheet
 	body
 		div( id="app" )
 			script( src="build/build.js" )
+</html>
